# vozdipovo

./: .gitignore  CHEATSHEET.md  README.md  RUNBOOK 2.md  RUNBOOK.md  TODO.md  launch.sh  launchPipelineFull.sh  launchPipelineParcial.sh  launchResetAmbiente.sh  launchResetFactory.sh  pyproject.toml
configs/: default.yaml  editorial.json
configs/prompts/: diretor.md  editor.md  reporter.md
docs/: sources.py
scripts/: debug_judging.py  export_articles_dataset.py  init_db.py  inspect_llm_errors.py  pipeline_doctor.py  pipeline_trace.py  reset_db.py  reset_wp.py  run_once.py  run_overnight.sh  stats_scores.py  stats_scores_global.py
scripts/sql/: check_repeated_titles.sql
src/vozdipovo_app/: __init__.py  api_client.py  article_reviser.py  audio_generator.py  categories.py  category_map.py  category_registry.py  category_rules.py  cli.py  cli_bo.py  cli_config.py  cli_wp.py  config.py  config_editorial.py  database.py  director.py  editor.py  editor_reviser.py  exporter.py  formatter.py  image_manager.py  judge.py  news_pipeline.py  processing.py  reporter.py  revision.py  settings.py  site_context.py
src/vozdipovo_app/analytics/: scoring_stats.py
src/vozdipovo_app/db/: connection.py  migrate.py  reset.py  schema.py  sqlite_conn.py
src/vozdipovo_app/editorial/: config.py  models.py
src/vozdipovo_app/llm/: __init__.py  errors.py  groq_client.py  (+8 more)
tests/: conftest.py  test_editorial_config_validation.py  test_import_contract.py  test_judge_scoring.py  test_settings_load.py
tools/: audit_legacy.py  conftest.py  repo_sanitize.py  run_checks.py  run_stage.py
(+44 files in other folders)
